--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
   <link href='css/style.css' rel='stylesheet' type='text/css'>
 </head>
 <body>
+  
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+     <H1>Food,LLC</H1>
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+    
+    </div>
+  </div>
+</nav>
+  
   <div class="container">
     <div class="row">
 
